Enlarged buttons for reset and copy of hours in create2.cshtml.

--- a/Sjuklöner/Views/Claims/Create2.cshtml
+++ b/Sjuklöner/Views/Claims/Create2.cshtml
@@ -151,7 +151,7 @@
                     <div class="col col-md-2 no-col-padding">
                         <div class="date-left-padding4">
                             Frisk
-                            <a class="btn btn-secondary btn-secondary-xsmall7" onclick="resetHours()">Nollställ</a>
+                            <a class="btn btn-secondary btn-secondary-xsmall7" title="Nollställer alla timmar för den här assistenten" onclick="resetHours()">Nollställ</a>
                         </div>
                     </div>
                     <div class="col col-md-6 no-col-padding">
@@ -318,7 +318,7 @@
 
                     <div class="row height-18-3">
                         <div class="col col-md-2 date-left-padding2 height-18-3">
-                            <a class="btn btn-secondary btn-secondary-xsmall7" onclick="copyRestToStandin(@k)">+ Rest</a>
+                            <a class="btn btn-secondary btn-secondary-xsmall7" title="Kopierar återstående timmar från ordinarie assistent till den här assistenten" onclick="copyRestToStandin(@k)">Kopiera timmar</a>
                         </div>
                         <div class="col col-md-6 no-col-padding">
                             <div class="height-18-2">
@@ -392,7 +392,7 @@
                     <div class="row line-height-08">
                         <div class="col col-md-2 no-col-padding">
                             <div class="date-left-padding2">
-                                <a class="btn btn-secondary btn-secondary-xsmall7" onclick="resetHoursSI(@k)">Nollställ</a>
+                                <a class="btn btn-secondary btn-secondary-xsmall7" title="Nollställer alla timmar för den här assistenten" onclick="resetHoursSI(@k)">Nollställ</a>
                             </div>
                         </div>
                         <div class="col col-md-6 no-col-padding">
