--- a/Sjuklöner/Views/Claims/Create2.cshtml
+++ b/Sjuklöner/Views/Claims/Create2.cshtml
@@ -317,8 +317,8 @@
                     </div>
 
                     <div class="row height-18-3">
-                        <div class="col col-md-2 date-left-padding2 height-18-3">
-                            <a class="btn btn-secondary btn-secondary-xsmall7" title="Kopierar återstående timmar från ordinarie assistent till den här assistenten" onclick="copyRestToStandin(@k)">Kopiera timmar</a>
+                        <div class="col col-md-2 date-left-padding5 height-18-3">
+                            <a class="btn btn-secondary btn-secondary-xsmall7" title="Kopierar återstående timmar från ordinarie assistent till den här assistenten" onclick="copyRestToStandin(@k)">Kopiera</a>
                         </div>
                         <div class="col col-md-6 no-col-padding">
                             <div class="height-18-2">
@@ -391,7 +391,7 @@
 
                     <div class="row line-height-08">
                         <div class="col col-md-2 no-col-padding">
-                            <div class="date-left-padding2">
+                            <div class="date-left-padding6">
                                 <a class="btn btn-secondary btn-secondary-xsmall7" title="Nollställer alla timmar för den här assistenten" onclick="resetHoursSI(@k)">Nollställ</a>
                             </div>
                         </div>
