--- a/Sjuklöner/Views/Claims/_ClaimForOmbud.cshtml
+++ b/Sjuklöner/Views/Claims/_ClaimForOmbud.cshtml
@@ -866,28 +866,43 @@
             </div>
             <div class="col col-md-9 form-group-div-frame">
                 <div class="row form-group-heading">
-                    Beslutade belopp
+                    Beslutsinformation
                 </div>
                 <div class="col col-md-5">
                     <div class="form-group line-height-12 display-large-font">
                         <div class="row label-padding">
-                            @Html.LabelFor(model => model.ApprovedSum, htmlAttributes: new { @class = "control-label-left-align control-label-large col-md-12" })
+                            @Html.LabelFor(model => model.DecisionTransferTimeStamp, htmlAttributes: new { @class = "control-label-left-align control-label-large col-md-12" })
                         </div>
                         <div class="row display-padding">
-                            @Html.DisplayFor(m => m.ApprovedSum)
+                            @Html.DisplayFor(model => model.DecisionTransferTimeStamp)
                         </div>
+                        @*<div class="row label-padding">
+                                @Html.LabelFor(model => model.RejectedSum, htmlAttributes: new { @class = "control-label-left-align2 control-label-large col-md-12" })
+                            </div>
+                            <div class="row display-padding6">
+                                @Html.DisplayFor(m => m.RejectedSum)
+                            </div>*@
                     </div>
                 </div>
-                <div class="col col-md-5">
-                    <div class="form-group line-height-12 display-large-font">
-                        <div class="row label-padding">
-                            @Html.LabelFor(model => model.RejectedSum, htmlAttributes: new { @class = "control-label-left-align2 control-label-large col-md-12" })
-                        </div>
-                        <div class="row display-padding6">
-                            @Html.DisplayFor(m => m.RejectedSum)
+                @if (User.IsInRole("AdministrativeOfficial") || User.IsInRole("Admin"))
+                {
+                    <div class="col col-md-5">
+                        <div class="form-group line-height-12 display-large-font">
+                            <div class="row label-padding">
+                                @Html.LabelFor(model => model.DecisionContent, htmlAttributes: new { @class = "control-label-left-align control-label-large col-md-12" })
+                            </div>
+                            <div class="row display-padding">
+                                @Html.DisplayFor(model => model.DecisionContent)
+                            </div>
+                            @*<div class="row label-padding">
+                                    @Html.LabelFor(model => model.ApprovedSum, htmlAttributes: new { @class = "control-label-left-align control-label-large col-md-12" })
+                                </div>
+                                <div class="row display-padding">
+                                    @Html.DisplayFor(m => m.ApprovedSum)
+                                </div>*@
                         </div>
                     </div>
-                </div>
+                }
             </div>
         </div>
     }
