Added another fix for rejected sum to pdf.

--- a/Sjuklöner/Views/Claims/ClaimDetailsPdf.cshtml
+++ b/Sjuklöner/Views/Claims/ClaimDetailsPdf.cshtml
@@ -826,10 +826,10 @@
                     <div class="col col-xs-5">
                         <div class="form-group line-height-12 display-large-font">
                             <div class="row label-padding">
-                                @Html.LabelFor(model => model.RejectedSum, htmlAttributes: new { @class = "control-label-left-align2 control-label-large col-xs-12" })
+                                @Html.LabelFor(model => model.DecisionContent, htmlAttributes: new { @class = "control-label-left-align2 control-label-large col-xs-12" })
                             </div>
                             <div class="row display-padding6">
-                                @Html.DisplayFor(m => m.RejectedSum)
+                                @Html.DisplayFor(m => m.DecisionContent)
                             </div>
                         </div>
                     </div>
