Updates to modal and pdf.

--- a/Sjuklöner/Views/Claims/ClaimDetailsPdf.cshtml
+++ b/Sjuklöner/Views/Claims/ClaimDetailsPdf.cshtml
@@ -814,7 +814,7 @@
                 <div class="col col-xs-5">
                     <div class="form-group line-height-12 display-large-font">
                         <div class="row label-padding">
-                            @Html.LabelFor(model => model.DecisionTransferTimeStamp, htmlAttributes: new { @class = "control-label-left-align control-label-large col-xs-12" })
+                            @Html.LabelFor(model => model.DecisionTransferTimeStamp, htmlAttributes: new { @class = "control-label-left-align col-xs-12" })
                         </div>
                         <div class="row display-padding">
                             @Html.DisplayFor(m => m.DecisionTransferTimeStamp)
@@ -826,7 +826,7 @@
                     <div class="col col-xs-5">
                         <div class="form-group line-height-12 display-large-font">
                             <div class="row label-padding">
-                                @Html.LabelFor(model => model.DecisionContent, htmlAttributes: new { @class = "control-label-left-align2 control-label-large col-xs-12" })
+                                @Html.LabelFor(model => model.DecisionContent, htmlAttributes: new { @class = "control-label-left-align2 col-xs-12" })
                             </div>
                             <div class="row display-padding6">
                                 @Html.DisplayFor(m => m.DecisionContent)
