--- a/Sjuklöner/Views/Claims/_ClaimForOmbud.cshtml
+++ b/Sjuklöner/Views/Claims/_ClaimForOmbud.cshtml
@@ -869,9 +869,9 @@
                     Beslutsinformation
                 </div>
                 <div class="col col-md-5">
-                    <div class="form-group line-height-12 display-large-font">
+                    <div class="form-group line-height-12">
                         <div class="row label-padding">
-                            @Html.LabelFor(model => model.DecisionTransferTimeStamp, htmlAttributes: new { @class = "control-label-left-align control-label-large col-md-12" })
+                            @Html.LabelFor(model => model.DecisionTransferTimeStamp, htmlAttributes: new { @class = "control-label-left-align col-md-12" })
                         </div>
                         <div class="row display-padding">
                             @Html.DisplayFor(model => model.DecisionTransferTimeStamp)
@@ -887,9 +887,9 @@
                 @if (User.IsInRole("AdministrativeOfficial") || User.IsInRole("Admin"))
                 {
                     <div class="col col-md-5">
-                        <div class="form-group line-height-12 display-large-font">
+                        <div class="form-group line-height-12">
                             <div class="row label-padding">
-                                @Html.LabelFor(model => model.DecisionContent, htmlAttributes: new { @class = "control-label-left-align control-label-large col-md-12" })
+                                @Html.LabelFor(model => model.DecisionContent, htmlAttributes: new { @class = "control-label-left-align2 col-md-12" })
                             </div>
                             <div class="row display-padding">
                                 @Html.DisplayFor(model => model.DecisionContent)
