--- a/Sjuklöner/Views/Claims/_ClaimForOmbud.cshtml
+++ b/Sjuklöner/Views/Claims/_ClaimForOmbud.cshtml
@@ -891,7 +891,7 @@
                             <div class="row label-padding">
                                 @Html.LabelFor(model => model.DecisionContent, htmlAttributes: new { @class = "control-label-left-align2 col-md-12" })
                             </div>
-                            <div class="row display-padding">
+                            <div class="row display-padding6">
                                 @Html.DisplayFor(model => model.DecisionContent)
                             </div>
                             @*<div class="row label-padding">
